samples/_failures_safe/1761636112_77b288_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b7075d4.c: In function ‘main’:
./samples/SAFE/__tmp_7b7075d4.c:149: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7b7075d4.c:148:13: error: expected declaration or statement at end of input
  148 |             if
      |             ^~
./samples/SAFE/__tmp_7b7075d4.c:148:13: error: expected declaration or statement at end of input
